2016-05-10  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Display glyph point numbers.

	* src/ftinspect.cpp (GlyphPointNumbers::GlyphPointNumbers,
	GlyphPointNumbers::boundRect, GlyphPointNumbers::paint): New methods
	for constructing the set of glyph point numbers.
	(MainGUI::drawGlyph): Honor `glyph point indices' check box.
	(MainGUI::createLayout): Updated.
	(MainGUI::createConnections): Handle `showPointIndicesCheckBox'.

	* src/ftinspect.h (GlyphPoints): New class, derived from
	`QGraphicsItem'.
	(MainGUI): Mew member `currentGlyphPointNumbersItem'.
	Updated.

2016-05-09  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Display glyph points.

	Also fix other minor issues.

	* src/ftinspect.cpp (GlyphPoints::GlyphPoints,
	GlyphPoints::boundRect, GlyphPoints::paint): New methods for
	constructing the set of glyph points.
	(MainGUI::checkShowPoints, MainGUI::setGraphicsDefaults): Updated.
	(MainGUI::drawGlyph): Honor `glyph outlines' and `glyph points'
	check boxes.
	(MainGUI::createLayout): Updated.
	(MainGUI::createConnections): Handle `showOutlinesCheckBox'.

	(GlyphOutline::GlyphOutline): Improve computation of bounding
	rectangle.
	(Engine::update): Updated.

	* src/ftinspect.h (Engine): Remove unused members which are handled
	in MainGUI.
	(GlyphPoints): New class, derived from `QGraphicsItem'.
	(MainGUI): Mew member `currentGlyphPointsItem'.

2016-05-09  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.cpp, src/ftinspect.h: s/loadGlyph/loadOutline/.
	s/Glyph/GlyphOutline/.
	s/drawGlyphOutline/drawGlyph/.

2016-05-09  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Display glyphs outlines.

	* src/ftinspect.cpp (Engine::loadGlyph): New method.
	(moveTo, lineTo, conicTo, cubicTo): New wrapper functions for
	`QPainterPath' methods.
	(outlineFuncs): New structure, used as an interface to
	`FT_Outline_Decompose'.
	(Glyph::Glyph, Glyph::boundRect, Glyph::paint): New methods for
	constructing a glyph object.
	(MainGUI::drawGlyphOutline): New method.